[package]
name = "cosmorch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"

[dependencies.tokio]
version = "1.18.2"
# default-features = false
features = [
  "rt",
  "macros",
]

[dependencies.abci-rs]
# The most recent release seems to have a basic `cargo check` failure, so we're using the git repo default branch:
# version = "0.11.2"
git = "https://github.com/devashishdxt/abci-rs"
default-features = false
features = [
  "async-api",
  "use-tokio",
]
